--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -23,7 +23,7 @@
 
 
 <string-array name="ButtonChoice">
-<item>Mouse Mode</item>
+<item>Mouse Mode</item><item>Laptop Trackpad</item>
 <item>Slideshow Presenter</item>
 <item>2 Buttons</item><item>3 Buttons</item><item>4 Buttons</item><item>5 Buttons</item><item>1 Axis, 1 Slider,\n6 buttons (3 toggle)</item>
 <item>1 Axis, \n8 buttons</item>
@@ -35,7 +35,7 @@
 
 </string-array>
 <string-array name="ButtonChoiceVals">
-<item>mouse</item>
+<item>mouse</item><item>mouse2</item>
 <item>slide</item>
 <item>1s1</item><item>1s2</item><item>1s3</item><item>1s4</item><item>1</item>
 <item>2</item>
