--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -48,6 +48,9 @@
 <string name="new_app_name">DroidPad - New UI</string>
 <string name="generic_layout_description">%1$d buttons, %2$d sliders, %3$d trackpads.</string>
 <string name="generic_layout_title">%1$s layout %2$d</string>
+<string name="connectWaiting">Waiting for connection&#8230;</string>
+<string name="connected">Connected to PC</string>
+<string name="connectFailed">Lost connection with computer. Waiting for reconnect&#8230;</string>
 
 
 </resources>
