Got mDNS working on android 4.0, added custom phone name preference.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,4 +15,5 @@
 	<string name="js">Joystick</string>
 	<string name="mouse">Mouse</string>
 	<string name="slideshow">Slideshow</string>
+	<string name="deviceDefaultName">Android Device</string>
 </resources>
