--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,4 +16,6 @@
 	<string name="mouse">Mouse</string>
 	<string name="slideshow">Slideshow</string>
 	<string name="deviceDefaultName">Android Device</string>
+	
+	<string name="betaWelcome">Please note that you will need the 2.0 version of the PC client of DroidPad. Please visit digitalsquid.co.uk on your PC to download this.</string>
 </resources>
