--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,4 +18,6 @@
 	<string name="deviceDefaultName">Android Device</string>
 	
 	<string name="betaWelcome">Please note that you will need the 2.0 version of the PC client of DroidPad. Please visit digitalsquid.co.uk on your PC to download this.</string>
+	
+	<string name="customlayouthelp">Custom Layout Help</string>
 </resources>
