--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,4 +19,6 @@
 	<string name="betaWelcome">Please note that you will need the 2.0 version of the PC client of DroidPad. Please visit digitalsquid.co.uk on your PC to download this.</string>
 	
 	<string name="customlayouthelp">Custom Layout Help</string>
+	
+	<string name="enable_dev_mode">Enable USB (Development) Mode</string>
 </resources>
