--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">DroidPad 2.0 Beta</string>
+    <string name="app_name">DroidPad</string>
 	<string name="Wifi">Wifi settings</string>
 	<string name="WifiShort">Wifi</string>
 	<string name="About">About</string>
