--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -38,12 +38,13 @@
 	    
 	<string name="pairsuccesstitle">Pairing successful</string>
 	
-	<string name="pairsuccessdescription">The new device %s was successfully paired to this device.</string>
+	<string name="pairsuccessdescription">The computer %s was successfully paired to this device.</string>
 	
 	<string name="authfailedtitle">Authentication failed</string>
 	
-	<string name="authfaileddescription">The computer trying to connect to this device hasn\'t been paired yet.
-	    If the device has been paired correctly then it is possible that someone is interfering with the communications between this device and the computer.</string>
+	<string name="authfaileddescription">DroidPad now secures the connections between the computer and the phone / tablet.
+	    To make sure the communications are secure, please select the \'Pair New Device\' option from the \'File\' menu on the computer.
+	    This only has to be done once and ensures secure communications.</string>
 	
 	<string name="onlysecureconnection">Only Secure Connections</string>
 	
